welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: '=>' expected but '<-' found.
	case true if bSmile == true <- true
                                    ^