welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = aSmile match  {
	case true if bSmile == true <- true
	case false if bSmile == false <- true
	case - <- false
}
